| Summary: | ASTERISK-21401: [patch] codec_resample cannot be unloaded | ||
| Reporter: | Corey Farrell (coreyfarrell) | Labels: | |
| Date Opened: | 2013-04-10 13:27:37 | Date Closed: | 2013-04-12 17:27:55 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Codecs/codec_resample |
| Versions: | SVN 11.4.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ( 0) codec_resample-unload.patch | |
| Description: | trans_size is set larger than needed, leaving the final entries of the array uninitialized. The unload procedure uses trans_size to determine how many entries need to be cleaned up.
| ||
| Comments: | By: Corey Farrell (coreyfarrell) 2013-04-10 13:27:59.880-0500 Correct trans_size, reduce allocation size of translations By: Kinsey Moore (kmoore) 2013-04-12 17:27:55.446-0500 Fix committed in 385582, 385585 for 11 and trunk respectively. | ||